--- a/home.html
+++ b/home.html
@@ -7,11 +7,8 @@
     <meta name="author" content="Smart Money club">
     <title>Smart Money Club</title>
 
-    <!-- css links -->
-    <link rel="stylesheet" href="/styles/_main.css">
-
     <!-- js links -->
-     <script src="/js/jquery-3.7.1.js"></script>
+    <script src="/js/jquery-3.7.1.js"></script>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- bootstrap cdn -->
@@ -19,8 +16,16 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+    <!-- css links -->
+    <link rel="stylesheet" href="styles/_main.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
 
+    
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
