--- a/home.html
+++ b/home.html
@@ -7,9 +7,6 @@
     <meta name="author" content="Smart Money club">
     <title>Smart Money Club</title>
 
-    <!-- js links -->
-    <script src="/js/jquery-3.7.1.js"></script>
-
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,47 +14,49 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- css links -->
-    <link rel="stylesheet" href="styles/_main.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="styles/_main.css">
+
+    <!-- js links -->
+    <script src="/js/jquery-3.7.1.js"></script>
+    <script src="/js/main.js" defer></script>
 </head>
 <body>
 
-    <header class="header_wrapper">
-        <nav class="navbar navbar-expand-lg " id="navbar">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="/content/logo.jpg" class="logo img-fluid" alt="Smart Money Club logo">
-                </a>
-                <button class="navbar-toggler pe-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <!-- <span class="navbar-toggler-icon"></span> -->
-                    <i class="fa-solid fa-bars navbar-toggler-icon"></i>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav menu-navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item text-center">
-                            <a class="nav-link nav-custom-button" href="">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div class="header_wrapper">
 
+        <nav class="nav">
+            <a href="#" class="logo">
+                <img src="/content/logo-light.png" alt="">
+            </a>
+
+            <div class="link-wrapper" data-menu-mobile-screen>
+                <ul class="">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Membership</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Masterclass</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Login</a>
+                    </li>
+                </ul>
+            </div>
+
+            <button class="menu-button" id="menu-button">
+                <i class="fa-solid fa-bars" data-menu-icon></i>
+            </button>
+        </nav>
+
+    </div>
+
+
+    <div class="support">
+        <i class="fa-solid fa-handshake-angle"></i>
+        Support
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
