--- a/home.html
+++ b/home.html
@@ -52,6 +52,30 @@
 
     </div>
 
+    <!-- Hero section -->
+    
+    <div class="hero-section">
+        <div class="hero-top">
+            <p class="hero-large-text">JOIN THE COMMUNITY</p>
+            <p class="hero-small-text"><i>TOP 1%</i> MONEY MAKERS IN INDIA</p>
+            <p class="hero-sub-text">Stock markets don't have to be STRESSFUL.</p>
+            <p class="hero-description">
+                Let's change the way your approach markets. Its not
+                just a trading course - its a mission to evolve  &
+                investors in India & start your stress-free &
+                peaceful journey in the stock market.
+            </p>
+        </div>
+
+        <div class="hero-bottom">
+            <button class="hero-bottom-button">Join now <i class="fa-solid fa-arrow-right"></i></button>
+            <div class="trustpoilt">
+                
+            </div>
+        </div>
+    </div>
+
+
 
     <div class="support">
         <i class="fa-solid fa-handshake-angle"></i>
