--- a/home.html
+++ b/home.html
@@ -78,6 +78,100 @@
     </div>
 
 
+    <!-- section -->
+    <!-- <div class="section-2 container">
+        <p class="section-2-title">smart money journey</p>
+        <div class="card-row">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <section class="py-5 section-2">
+        <div class="container">
+          <!-- Section Title -->
+          <div class="text-center mb-5">
+            <p class="section-2-title">smart money journey</p>
+          </div>
+          <!-- Cards Row -->
+          <div class="row g-4">
+            <!-- Card 1 -->
+            <div class="col-md-4">
+                <div class="card custom-card h-100">
+                  <div class="card-body">
+                  <h5 class="card-title">STEP #1</h5>
+                  <h6 class="card-subtitle mb-2">Break & Rebuild</h6>
+                  <p class="card-text">Start your Smart Money Club journey by
+                    challanging all your false belives or eveything
+                    you've learnt while with you exprience </p>
+                </div>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="col-md-4">
+              <div class="card custom-card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">STEP #2</h5>
+                  <h6 class="card-subtitle mb-2">EXECUTE & TRADE</h6>
+                  <p class="card-text">Every Sunday, we have live
+                    inner circle calls where we
+                    break down the markets for
+                    the week and talk about
+                    stocks worth watching. It's
+                    practical, it's actionable,
+                    and it's all about making
+                    trading easier for you while
+                    connecting with the
+                    community. Community
+                    members also run
+                    screening sessions and
+                    market discussions on their
+                    own, which keeps the
+                    learning alive.  </p>
+                </div>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="col-md-4">
+              <div class="card custom-card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">STEP #3</h5>
+                  <h6 class="card-subtitle mb-2">NETWORK & GROW</h6>
+                  <p class="card-text">You'll get lifetime access to
+                    our private Discord
+                    community where smart,
+                    passionate people share
+                    thoughts, opportunities,
+                    and ideas. Trading doesn't
+                    need to be lonely—this is
+                    where you'll grow and stay
+                    accountable with people
+                    who get you. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    
 
     <div class="support">
         <i class="fa-solid fa-handshake-angle"></i>
