--- a/home.html
+++ b/home.html
@@ -55,10 +55,10 @@
             <div class="hero-text-wrapper">
                 
                 <div class="hero-text-top">
-                    <span class="glow">JOIN THE COMMUNITY</span>
+                    <span class="glow">JOIN THE COMMUNITY</span><br>
                     <p class="hero-title">
                         <span class="gold">TOP 1%</span> MONEY MAKERS IN INDIA
-                    </p>
+                    </p><br>
 
                     <div class="hero-description">
                         Let's change the way your approach markets. Its not just a trading course - its a mission to evolve  & investors in India & start your stress-free &  peaceful journey in the stock market. 
