minor updates in about

--- a/home.html
+++ b/home.html
@@ -150,6 +150,17 @@
     <div class="about">
         
         <h1>About us</h1>
+
+        <div class="about-description-section">
+            <p class="desc-title">Why SMC is different</p>
+            <p>
+                Here's what makes Smart Money Club special: We don't leave you to figure it all out on your own.
+                We teach you everything you need to know—from understanding the basics to mastering advanced strategies.
+                We're there with you as you start trading, helping you make sense of it all.
+                And every week, we trade with you. Yes, you heard that right—we're right there with you, implementing everything together.
+                It's not just a course. It's a full-blown membership where you become part of a community of people like you, all working towards the same goal. It's like joining a family—a family that has your back as you navigate the wild world of stock trading
+            </p>
+        </div>
         
         <div class="about-wrapper">
 
