Improved Hero section - added video in content/ -changed ui of hero section

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <!-- navbar -->
         <nav>
             <div class="nav-logo">
-                <img src="/content/logo-light.png" alt="SmartMoneyClub-logo">
-                <p class="nav-text">SMART MONEY CLUB</p>
+                <img src="/content/logo-zoomed.jpg" alt="SmartMoneyClub-logo">
             </div>
             <div class="nav-links-section" data-links-wrapper>
                 <ul>
@@ -53,7 +52,6 @@
         <!-- hero -->
         <div class="hero-container">
             <div class="hero-text-wrapper">
-                
                 <div class="hero-text-top">
                     <span class="glow">JOIN THE COMMUNITY</span>
                     <p class="hero-title">
