Improved footer / Section 5

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                 Here's the truth: More than 90% of stock market courses in India are purely transactional. You buy it, they hand you a bunch of videos, and that's the end of it. Nobody's there for you when you hit your first roadblock. Nobody helps you figure things out when the market throws something unexpected your way.
             </p>
         </div>
-        <div class="section-5-right"></div>
+        <div class="section-5-right">
+            <video src="/content/sample_video.mp4" autoplay loop></video>
+        </div>
      </div>
 
      <section class="journey">
@@ -307,6 +309,10 @@
             <div class="footer-section">
                 <h3>About Us</h3>
                 <p>Changing the way you approach markets. It's not just a trading course but a mission to build stress-free investors in India.</p>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of use</a></li>
+                </ul>
             </div>
 
             <!-- Contact Section -->
@@ -314,6 +320,11 @@
                 <h3>Contact Us</h3>
                 <p>Email: support@moneymakers.in</p>
                 <p>Phone: +91-9876543210</p>
+            </div>
+            
+            <div class="footer-section">
+                <h3>Policy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore laboriosam sint veritatis dolor quia voluptate earum iste minima, dolorum repellendus! Obcaecati porro repellat iure cum nulla asperiores quam iusto accusantium.</p>
             </div>
         </div>
 
