Improved overall UI

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
      </div>
 
      <section class="journey">
-        <h1 class="journey-heading">SMART MONEY JOURNEY</h1>
+        <h1 class="journey-heading">Smart Money Journey</h1>
         <div class="steps-container">
             <!-- Step 1 -->
             <div class="step">
@@ -180,7 +180,7 @@
     <!-- Save-10 section -->
     <div class="container">
         <header class="header">
-            <h1>WE SAVE <span>10 YEARS</span> OF TRIAL AND ERROR</h1>
+            <h1>WE SAVE <span>10&nbsp;YEARS</span> OF TRIAL AND ERROR</h1>
         </header>
         <div class="content">
             <div class="column image-column">
@@ -320,6 +320,11 @@
                 <h3>Contact Us</h3>
                 <p>Email: support@moneymakers.in</p>
                 <p>Phone: +91-9876543210</p>
+                <ul class="footer-links">
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-discord"></i></a></li>
+                </ul>
             </div>
             
             <div class="footer-section">
