--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="nav-links-section" data-links-wrapper>
                 <ul>
                     <li><a href="#membership">Membership</a></li>
-                    <li><a href="">Masterclass</a></li>
+                    <li><a href="masterclass.html">Masterclass</a></li>
                     <li><a href="">Login</a></li>
                 </ul>
             </div>
