--- a/index.html
+++ b/index.html
@@ -127,17 +127,33 @@
 
     <!-- Section #3 -->
     <div class="section-3">
-        <div class="section-3-box">
-            <p class="box-title"><i class="fa-solid fa-calendar-week"></i> <span>Weekly Inner Circle Calls</span></p>
-            <p class="box-paragraph">We're not here to sell you information. We're here to walk with you through every step of your trading journey.Every week, we meet as a community to discuss market opportunities and strategies for the upcoming week. These calls aren't just about learning—they're about engaging, sharing ideas, and growing together.</p>
+        <div class="box-container">
+            <div class="section-3-box">
+                <p class="box-title"><i class="fa-solid fa-calendar-week"></i> <span>Weekly Inner Circle Calls</span></p>
+                <p class="box-paragraph">We're not here to sell you information. We're here to walk with you through every step of your trading journey.Every week, we meet as a community to discuss market opportunities and strategies for the upcoming week. These calls aren't just about learning—they're about engaging, sharing ideas, and growing together.</p>
+            </div>
+            <div class="section-3-box">
+                <p class="box-title"><i class="fa-solid fa-magnifying-glass"></i> Complete Transparency</p>
+                <p class="box-paragraph">Unlike most communities, we encourage open communication. Our members can freely connect and talk to each other. We're completely transparent with everything we do—and that's reflected in our reputation, with no negative reviews on TrustPilot.</p>
+            </div>
+            <div class="section-3-box">
+                <p class="box-title"><i class="fa-solid fa-gear"></i> Tools to Save You Time</p>
+                <p class="box-paragraph">We've built systematic tools for every part of the process. Whether it's back-testing, trade execution, or strategy building, we have tools in place that can save you over 100+ hours a year if you're a serious trader. Everything we teach is supported by practical resources.</p>
+            </div>
         </div>
-        <div class="section-3-box">
-            <p class="box-title"><i class="fa-solid fa-magnifying-glass"></i> Complete Transparency</p>
-            <p class="box-paragraph">Unlike most communities, we encourage open communication. Our members can freely connect and talk to each other. We're completely transparent with everything we do—and that's reflected in our reputation, with no negative reviews on TrustPilot.</p>
-        </div>
-        <div class="section-3-box">
-            <p class="box-title"><i class="fa-solid fa-gear"></i> Tools to Save You Time</p>
-            <p class="box-paragraph">We've built systematic tools for every part of the process. Whether it's back-testing, trade execution, or strategy building, we have tools in place that can save you over 100+ hours a year if you're a serious trader. Everything we teach is supported by practical resources.</p>
+        <div class="box-container">
+            <div class="section-3-box">
+                <p class="box-title"><i class="fa-solid fa-calendar-week"></i> <span>Weekly Inner Circle Calls</span></p>
+                <p class="box-paragraph">We're not here to sell you information. We're here to walk with you through every step of your trading journey.Every week, we meet as a community to discuss market opportunities and strategies for the upcoming week. These calls aren't just about learning—they're about engaging, sharing ideas, and growing together.</p>
+            </div>
+            <div class="section-3-box">
+                <p class="box-title"><i class="fa-solid fa-magnifying-glass"></i> Complete Transparency</p>
+                <p class="box-paragraph">Unlike most communities, we encourage open communication. Our members can freely connect and talk to each other. We're completely transparent with everything we do—and that's reflected in our reputation, with no negative reviews on TrustPilot.</p>
+            </div>
+            <div class="section-3-box">
+                <p class="box-title"><i class="fa-solid fa-gear"></i> Tools to Save You Time</p>
+                <p class="box-paragraph">We've built systematic tools for every part of the process. Whether it's back-testing, trade execution, or strategy building, we have tools in place that can save you over 100+ hours a year if you're a serious trader. Everything we teach is supported by practical resources.</p>
+            </div>
         </div>
     </div>
 
