Updated "WHY SMC"

--- a/index.html
+++ b/index.html
@@ -230,19 +230,46 @@
             <li><i class="fa-solid fa-circle-check"></i> Get Rich slowly but surely</li>
         </ul>
      </div>
+
+    <!-- Why SMC section -->
+    <section class="why">
+
+        <p class="why-title">WHY SMC IS DIFFERENT</p>
+        <div class="why-info">
+            <div>
+                <span>#1</span>
+                <p class="why-points">
+                    We don't leave you to figure it all out on your own.
+                    We teach you everything you need to know.
+                    From understanding the basics to mastering advanced strategies.
+                </p>
+            </div>
+            <div>
+                <span>#2</span>
+                <p class="why-points">
+                    We're there with you as you start trading, helping you make sense of it all.
+                    Every week, we trade with you.
+                    Yes, you heard that right! we're right there with you.
+                </p>
+            </div>
+            <div>
+                <span>#3</span>
+                <p class="why-points">
+                    It's not just a course.
+                    It's a full-blown membership where you become part of a community of people like you.
+                    Share ideas with common mindset to work towards your goal.
+                </p>
+            </div>
+        </div>
+        <p class="bottom-description">
+            It's like joining a family—a family that has your back as you navigate the wild world of stock trading
+        </p>
+    </section>
+    
+
+
     <!-- About section -->
     <div class="about">
-        <div class="about-description-section">
-            <p class="desc-title">Why SMC is different</p>
-            <p>
-                Here's what makes Smart Money Club special: We don't leave you to figure it all out on your own.
-                We teach you everything you need to know—from understanding the basics to mastering advanced strategies.
-                We're there with you as you start trading, helping you make sense of it all.
-                And every week, we trade with you. Yes, you heard that right—we're right there with you, implementing everything together.
-                It's not just a course. It's a full-blown membership where you become part of a community of people like you, all working towards the same goal. It's like joining a family—a family that has your back as you navigate the wild world of stock trading
-            </p>
-        </div>
-        
         <div class="about-wrapper">
 
             <div class="about-left">
